; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_zone.c_zone_free_definite_size.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_zone.c_zone_free_definite_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i64)* @zone_free_definite_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zone_free_definite_size(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = call i32 (...) @tsdn_fetch()
  %9 = load i8*, i8** %5, align 8
  %10 = call i64 @ivsalloc(i32 %8, i8* %9)
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @je_free(i8* %19)
  br label %24

21:                                               ; preds = %3
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @free(i8* %22)
  br label %24

24:                                               ; preds = %21, %13
  ret void
}

declare dso_local i64 @ivsalloc(i32, i8*) #1

declare dso_local i32 @tsdn_fetch(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @je_free(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
